--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@ body {
 */
 .logo {
     text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    color: #2196F3;
 }
 
 .site-nav {
