--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ body {
 
 .features-header {
     /*font-weight: 700;*/
+    font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
     color: var(--title-color);
